removing the changes from thrift auto generated files